# vibereps

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXERCISE_TRACKER_SETUP.md  LICENSE  PLAN.md  README.md  SECURITY.md  completions.bash  config.json  configure.py  exercise_tracker.py  exercise_ui.html  hooks.json.example  install.sh  mcp_exercise_server.py  notify_complete.py  package.json  pyproject.toml  requirements.txt  track_project.py  uninstall.sh  vibereps-usage.py  vibereps.py  vibereps_config.py  vibereps_setup.py
.claude/: settings.local.json
.claude/skills/: add-exercise  setup-vibereps  test-tracker  tune-detection  vibereps
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_exercise.md
.github/workflows/: docs.yml  (+1 more)
docs/: CNAME  index.md  package-lock.json  package.json
electron/: install-standalone.sh  main.js  package.json  preload.js  session-manager.js
exercises/: _template.json  arm_circles.json  calf_raises.json  chin_tucks.json  high_knees.json  jumping_jacks.json  neck_rotations.json  neck_tilts.json  pushups.json  shoulder_shrugs.json  side_stretches.json  squats.json  standing_crunches.json  torso_twists.json
monitoring/: README.md  docker-compose.yml  nginx-whiteboard.conf  otel-collector-config.yaml  prometheus.yml  whiteboard.html
scripts/: build-release.sh
server/: .env.example  main.py  models.py  requirements.txt
src/: notify.js  stats.js  tracker.js
tests/: README.md  global-setup.ts  package.json  playwright.config.ts
vibereps/: SKILL.md
(+25 files in other folders)
