[project]
name = "vibereps"
version = "0.1.0"
description = "Exercise tracking for Claude Code. Don't neglect your physical corpus."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["claude", "exercise", "health", "pose-detection", "mediapipe"]
authors = [
    {name = "Flow Club"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/Flow-Club/vibereps"
Documentation = "https://flow-club.github.io/vibereps/"
Repository = "https://github.com/Flow-Club/vibereps"
Issues = "https://github.com/Flow-Club/vibereps/issues"
